fix alignment #1

--- a/resources/styles/skin.cali.notifications.less
+++ b/resources/styles/skin.cali.notifications.less
@@ -23,7 +23,7 @@
 	top: 0;
 	height: 35px;
 	ul {
-		padding-bottom: 0.3em;
+		padding-top: 0.3em;
 		li {
 			&:hover {
 				background: #EF574F;
